# arctic-renderer

./: CMakeLists.txt  CMakePresets.json  README.md
shaders/: depth.hlsl  forward.hlsl  post_process.hlsl  skybox.hlsl  triangle.hlsl
src/: app.cpp  app.hpp  comptr.hpp  dxerr.hpp  engine.cpp  engine.hpp  forward_pass.cpp  forward_pass.hpp  main.cpp  post_process_pass.cpp  post_process_pass.hpp  renderer.cpp  renderer.hpp  rhi.cpp  rhi.hpp  scene.cpp  scene.hpp  shadow_map_pass.cpp  shadow_map_pass.hpp  util.hpp
src/renderer/: compiler.cpp  compiler.hpp  comptr.hpp  dxerr.hpp  forward_pass.cpp  forward_pass.hpp  post_process_pass.cpp  post_process_pass.hpp  renderer.cpp  renderer.hpp  rhi.cpp  rhi.hpp  scene.cpp  scene.hpp  shadow_map_pass.cpp  shadow_map_pass.hpp  skybox_pass.cpp  skybox_pass.hpp
